force-app/main/default/objects/Test_CSN__c/Test_CSN__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Test CSN</label>
</CustomObject>