force-app/main/default/objects/Test_CSN__c/fields/Domain__c.field-meta.xml
<CustomField>
    <fullName>Domain__c</fullName>
    <label>Domain</label>
    <type>Url</type>
</CustomField>