force-app/main/default/objects/Test_CSN__c/fields/Texter__c.field-meta.xml
<CustomField>
    <fullName>Texter__c</fullName>
    <label>Texter</label>
    <length>10</length>
    <type>Text</type>
</CustomField>